# Voice-Input-and-Cloud-AI

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
components/adc_handler/: CMakeLists.txt  adc_handler.c  adc_handler.h
components/i2s_audio/: CMakeLists.txt  i2s_audio.c  i2s_audio.h
components/mqtt_client/: CMakeLists.txt  mqtt_client.c  my_mqtt_client.h
components/oled_display/: CMakeLists.txt  oled_display.c  oled_display.h
components/ssd1306/: CMakeLists.txt
components/wifi_manager/: CMakeLists.txt  wifi_manager.c
main/: CMakeLists.txt  main.c
python_pc_bridge/: action_executor.py  ai_backend.py  intent_detector.py  main.py  serial_comm.py  speech_to_text.py
